<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/bilibili"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </ImageView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/EditText1"
                    android:singleLine="true"
                    android:theme="@style/MyEditText"
                    android:hint="请输入BV/AV号或者番剧链接"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </EditText>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:onClick="onBvUrl"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="解析"
            android:layout_margin="10dp"
            android:layout_gravity="center">
        </Button>

        <Button
            android:onClick="goLive"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/live"
            android:layout_margin="10dp"
            android:layout_gravity="center">
        </Button>

        <Button
            android:onClick="goSet"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/main_goSet"
            android:layout_margin="10dp"
            android:layout_gravity="center">
        </Button>
        <Button
            android:onClick="NewLogin"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/main_login_1"
            android:layout_margin="10dp"
            android:layout_gravity="center">
        </Button>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_n_android_data_com_imcys_bilibilias_files"/>
    </LinearLayout>
    </ScrollView>

    <ScrollView
        android:visibility="gone"
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/EditText2"
                        android:singleLine="true"
                        android:theme="@style/MyEditText"
                        android:hint="请输入BV/AV号或者番剧链接"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </EditText>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:background="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="查询"
                android:onClick="onBvUrl0"
                android:layout_margin="5dp"
                android:layout_gravity="center">
            </Button>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ImageView1"
                        android:scaleType="fitXY"
                        android:src="@drawable/bilibili"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </ImageView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/TextView1"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="标题">
            </TextView>

            <TextView
                android:id="@+id/UP"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UP主">
            </TextView>

            <TextView
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BILIBILI_MXJS">
            </TextView>

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="100dp"

                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="子集视频选择 ">
            </TextView>
            <Spinner
                android:id="@+id/Main_Spinner1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </Spinner>
        </LinearLayout>

            <LinearLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="100dp"

                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="视频清晰选择 ">
                </TextView>
                <Spinner
                    android:id="@+id/Main_Spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="100dp"

                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="下载格式选择 ">
                </TextView>
                <Spinner
                    android:id="@+id/Main_Spinner3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:onClick="goLike"
                            android:background="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:text="@string/main_GoLike"
                            android:layout_gravity="center">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:onClick="GoAdd"
                            android:background="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:text="@string/main_GoAdd"
                            android:layout_gravity="center">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:onClick="GoTriple"
                            android:background="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:text="@string/main_GoTriple"
                            android:layout_gravity="center">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:onClick="onBvUrl1"
                        android:background="@color/colorPrimaryDark"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#FFFFFF"
                        android:text="下载视频"
                        android:layout_gravity="center">
                    </Button>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:background="#FFFFFF"
        android:visibility="gone"
        android:id="@+id/WebLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <WebView
                android:id="@+id/WebView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/main_login"
                    android:onClick="UpLogin"
                    android:layout_gravity="center">
                </Button>
                <Button
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/main_login_new"
                    android:onClick="UpLoginNew"
                    android:layout_gravity="center">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>