<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <EditText
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:id="@+id/As_EditText1"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:theme="@style/MyEditText"
                        android:hint="请输入BV/AV号或者番剧链接"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    </EditText>
                    <Button
                        android:onClick="onBvUrl"
                        android:background="?colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="解析"
                        android:layout_gravity="right">
                    </Button>
                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <cn.jzvd.JzvdStd
                        android:id="@+id/As_VideoPlayer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </cn.jzvd.JzvdStd>
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/As_ImageView"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bilibili"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </ImageView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/As_Title"
                            android:layout_margin="5dp"
                            android:textSize="18sp"
                            android:textColor="?colorAccent"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="标题" />

                        <TextView
                            android:id="@+id/As_UP"
                            android:layout_margin="5dp"
                            android:layout_width="wrap_content"
                            android:gravity="right|center_vertical"
                            android:layout_height="wrap_content"
                            android:text="UP主" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="子集视频选择 ">
                </TextView>
                <Spinner
                    android:id="@+id/As_Main_Spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="视频清晰度选择">
                </TextView>
                <Spinner
                    android:id="@+id/As_Main_Spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="下载格式选择 ">
                </TextView>
                <Spinner
                    android:id="@+id/As_Main_Spinner3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:onClick="goLike"
                            android:background="?colorAccent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:text="@string/main_GoLike"
                            android:layout_gravity="center">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:onClick="GoAdd"
                            android:background="?colorAccent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:text="@string/main_GoAdd"
                            android:layout_gravity="center">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:onClick="GoTriple"
                            android:background="@color/colorAccent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:text="@string/main_GoTriple"
                            android:layout_gravity="center">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:onClick="barrageGet"
                            android:background="?colorAccent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:text="下载弹幕"
                            android:layout_gravity="center">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:onClick="onBvUrl1"
                            android:background="?colorAccent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:text="下载视频"
                            android:layout_gravity="center">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:onClick="FMDownload"
                            android:background="@color/colorAccent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:text="下载封面"
                            android:layout_gravity="center">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>




        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>